test_case/rust-lang_rust/51104_399715982_85.rs
\n\nRust only looks at the signature of the called function, as such it must\nalready specify all requirements that will be used for every type parameter.\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/unsized-enum2.rs","byte_start":1903,"byte_end":1909,"line_start":65,"line_end":65,"column_start":8,"column_end":14,"is_primary":true,"text":[{"text":"    VN{x: Bar},","highlight_start":8,"highlight_end":14}],"label":"doesn't have a size known at compile-time","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"the trait `std::marker::Sized` is not implemente Foo trait\n    some_func(5i32); // error: the trait bound `i32 : Foo` is not satisfied\n}\n